@@ -14,6 +14,7 @@ Added parameter includeTestRunnerOnly to Import-TestToolkitToBcContainer to allo
 Added parameteres bcAuthContext and environment to Import-TestToolkitToBcContainer to allow running tests on BC SaaS Sandbox environments (Test Runner is the only app in AppSource at the moment, TestFramework apps will be added)
 Added parameteres bcAuthContext and environment to Run-TestsInBcContainer to allow running tests on BC SaaS Sandbox environments
 Better stacktrace when exception happens in Invoke-ScriptInBcContainer
+Added parameteres bcAuthContext and environment to Run-AlPipeline to allow running a pipeline using BC SaaS Sandbox environments
 
 1.0.19
 Move retry algorithm to Download-File
